@@ -65,6 +65,9 @@ avatar.airBubbleElytra=Cannot use air bubble with elytra
 avatar.bisonStats=Bison is at ${food}%% food, ${health}%% health, and ${domestication} domestication.
 avatar.outOfScrolls=This bender's pack is empty. They probably wouldn't have any scrolls to give you.
 avatar.abilityLocked=You need to unlock that ability before you can use it!
+avatar.bisonChestSlots1=Your bison does not have any
+avatar.bisonChestSlots2=inventory yet, but will gain
+avatar.bisonChestSlots3=more slots as it grows older.
 
 avatar.bisonWhistle.summon=Your bison was called and will be here in approximately ${time} seconds!
 avatar.bisonWhistle.assign=Bound this Bison Whistle to ${bison}.
